# apriltag_detector_pywrapper

./: .gitignore  README.md  april_detector_pywrapper.pyx  opencv_mat.pxd  opencv_mat.pyx  pyproject.toml  requirements.txt  setup.py
example/: capture.py  demo.py  main.py
include/apriltags/: Homography33.h  TagDetection.h
include/apriltags/example/: april_detector_manager.hpp
src/: TagDetection.cc
src/example/: CMakeLists_.txt  april_detector_manager.cpp  apriltags_demo.cpp
